# imsim

./: .pre-commit-config.yaml  README.md  pyproject.toml
imsim/: index.py  model.py  search.py
imsim/cli/: main.py  search.py  vectorize.py
